# UnrealDataBridgeMCP

./: .gitignore  LICENSE  README.md  UnrealDataBridge.uplugin
ClaudeCommands/: README.md  data-add.md  data-remove.md  data-search.md  data-update.md  unreal-data.md
MCP/: pyproject.toml
MCP/src/unreal_data_bridge_mcp/: __init__.py  __main__.py  cache.py  response.py  server.py  tcp_client.py
MCP/src/unreal_data_bridge_mcp/tools/: __init__.py  assets.py  curve_tables.py  data_assets.py  datatables.py  gameplay_tags.py  localization.py
MCP/tests/: test_cache.py
Source/UnrealDataBridge/: UnrealDataBridge.Build.cs
Source/UnrealDataBridge/Private/: UDBCommandHandler.cpp  UDBEditorUtils.cpp  UDBSerializer.cpp  UDBSettings.cpp  UDBTcpServer.cpp  UnrealDataBridgeModule.cpp
Source/UnrealDataBridge/Private/Operations/: UDBAssetSearchOps.cpp  UDBAssetSearchOps.h  UDBCurveTableOps.cpp  UDBCurveTableOps.h  UDBDataAssetOps.cpp  UDBDataAssetOps.h  UDBDataTableOps.cpp  UDBDataTableOps.h  UDBGameplayTagOps.cpp  UDBGameplayTagOps.h  UDBLocalizationOps.cpp  UDBLocalizationOps.h
Source/UnrealDataBridge/Public/: UDBCommandHandler.h  UDBEditorUtils.h  UDBSerializer.h  UDBSettings.h  UDBTcpServer.h  UnrealDataBridgeModule.h
Source/UnrealDataBridgeTests/: UnrealDataBridgeTests.Build.cs
Source/UnrealDataBridgeTests/Private/: UDBBatchCommandTest.cpp  UDBCurveTableTest.cpp  UDBDataCatalogTest.cpp  UDBListDatatablesTest.cpp  UDBModuleLoadTest.cpp  UDBQueryByNamesTest.cpp  UDBResolveTagsTest.cpp  UDBSerializerTest.cpp  UDBTcpServerTest.cpp  UDBTestModule.cpp  UDBUndoRedoTest.cpp
