[project]
name = "unreal-data-bridge-mcp"
version = "0.1.0"
description = "MCP server bridging AI tools to Unreal Engine data systems"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
unreal-data-bridge-mcp = "unreal_data_bridge_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
